# quicklist-spotify

./: .gitignore  README.md  rollup.config.mjs
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: app.rs  main.rs  router.rs
frontend/src/app/: login_window.rs  view.rs
frontend/src/elements/: button.rs  column.rs  dotcom_shell.rs  grid.rs  input.rs  mod.rs  row.rs  search.rs  tile.rs
public/: index.js
shared/: Cargo.toml
shared/src/: lib.rs
