[package]
name = "backend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
moon.workspace = true
shared = { path = "../shared", features = ["backend"] }
serde = { version = "1.0.152", features = ["derive"] }
once_cell = "1.17.1"
anyhow = "1.0.69"
async-recursion = "1.0.2"
dotenv = "0.15.0"
